Fix horizontal scroll

--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -9,7 +9,7 @@
   min-width: 288px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 763px) {
   .intro__text {
     max-width: 720px;
   }
