--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,11 +1,6 @@
 .lead__image {
-  width: 100%;
-  object-fit: cover;
-}
-
-@media screen and (max-width: 1024px) {
-  .lead__image {
-    width: 100%;
-  }
+  max-width: 100%;
+  height: auto;
+  width: auto;
 }
 
